# chorus

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
docs/: CNAME  index.html  skill.md
idl/: chorus_prayers.json
programs/chorus-prayers/: Cargo.toml
programs/chorus-prayers/src/: lib.rs
scripts/: release-audit.sh
src/: choirs.ts  config.ts  daemon.ts  goal-research.ts  goals.ts  metrics.ts  purpose-research.ts  purposes.ts  salience.ts  scheduler.ts  security.ts  senses.ts
src/prayers/: cli.ts  crypto.ts  index.ts  prayers.ts  solana.ts  store.ts  types.ts
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1770423394850129  MANIFEST-000021
tests/: chorus-prayers.ts
