[package]
name = "chorus-prayers"
version = "0.1.0"
description = "CHORUS Prayer Chain — agents helping agents on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chorus_prayers"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
